заменил номер телфона

--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
 							<a href="mailto:mail@mail.ru" class="nav-link"><img src="img/ico/email-ico.png" class="me-2">mail@mail.ru</a>
 						</li>
 						<li class="nav-item me-5">
-							<a href="tel:‪89106247849‬" class="nav-link"><img src="img/ico/telephone-ico.png" class="me-2">‪8 (910) 624-78-49‬</a>
+							<a href="tel:+79299262301" class="nav-link"><img src="img/ico/telephone-ico.png" class="me-2">8 (929) 926-23-01</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link ico-button pe-0" href="#"><img src="img/ico/whatsapp-ico.png"></a>
@@ -306,7 +306,7 @@
 											<a href="mailto:mail@mail.ru" class="nav-link"><img src="img/ico/email-ico.png" class="me-2">mail@mail.ru</a>
 										</li>
 										<li class="nav-item me-5">
-											<a href="tel:‪89106247849‬" class="nav-link"><img src="img/ico/telephone-ico.png" class="me-2">‪8 (910) 624-78-49‬</a>
+											<a href="tel:+79299262301" class="nav-link"><img src="img/ico/telephone-ico.png" class="me-2">8 (929) 926-23-01</a>
 										</li>
 									</ul>
 								
