--- a/single-product.html
+++ b/single-product.html
@@ -72,8 +72,8 @@
 						<!--a class="ico-button" href="#"><img src="img/ico/vk-ico.png"></a-->
 					</div>
 					<div class="col-2 text-end">
-						<a href="tel:‪89106247849‬" class="header-phone">‪8 <span>(903)</span> 751-26-63‬</a>
-						<a href="#‬" class="header-callback">‪Обратный звонок‬</a>
+						<a href="tel:+79299262301" class="header-phone"> 8 <span>(929)</span>926-23-01</a>
+						<a href="#" class="header-callback">Обратный звонок</a>
 					</div>
 				</div>
 			</div>
@@ -129,10 +129,10 @@
 						</li>
 						<!-- Mobile menu -->
 						<li class="nav-item d-xl-none">
-							<a class="nav-link" href="tel:‪89037512663">8 <span>(903)</span> 751-26-63</a>
+							<a class="nav-link" href="tel:+79299262301">8 <span>(929)</span>926-23-01</a>
 						</li>
 						<li class="nav-item d-xl-none">
-							<a class="nav-link" href="#‬">‪Обратный звонок‬</a>
+							<a class="nav-link" href="#">Обратный звонок</a>
 						</li>
 						<li class="nav-item d-xl-none mb-2">
 							<a class="ico-button pe-2" href="#"><img src="img/ico/whatsapp-ico.png"></a>
@@ -767,7 +767,7 @@
 									</ul>
 								</div>
 								<div class="col-2 text-end">
-									<a href="tel:‪89037512663‬" class="contacts-phone">‪8 <span>(903)</span> 751-26-63‬</a>
+									<a href="tel:+79299262301" class="contacts-phone"> 8 <span>(929)</span> 926-23-01</a>
 								</div>
 							</div><!-- End Desktop version -->
 							
@@ -807,7 +807,7 @@
 									</ul>
 								</div>
 								<div class="col-12">
-									<a href="tel:‪89037512663‬" class="contacts-phone">‪8 <span>(903)</span> 751-26-63‬</a>
+									<a href="tel:+79299262301" class="contacts-phone"> 8 <span>(929)</span>926-23-01</a>
 								</div>
 							</div><!-- END Mobail version -->
 							
@@ -861,10 +861,10 @@
 									</li>
 									<!-- Mobile menu -->
 									<li class="nav-item d-xl-none">
-										<a class="nav-link" href="tel:‪89037512663">8 <span>(903)</span> 751-26-63</a>
+										<a class="nav-link" href="tel:+79299262301">8 <span>(929)</span>926-23-01</a>
 									</li>
 									<li class="nav-item d-xl-none">
-										<a class="nav-link" href="#‬">‪Обратный звонок‬</a>
+										<a class="nav-link" href="#"> Обратный звонок </a>
 									</li>
 									<li class="nav-item d-xl-none mb-2">
 										<a class="ico-button pe-2" href="#"><img src="img/ico/whatsapp-ico.png"></a>
