--- a/woocommerce/archive-product.html
+++ b/woocommerce/archive-product.html
@@ -71,8 +71,8 @@
 						<a class="ico-button" href="#"><img src="img/ico/vk-ico.png"></a>
 					</div>
 					<div class="col-2 text-end">
-						<a href="tel:‪89299262301‬" class="header-phone">‪8 <span>(929)</span> 926-23-01</a>
-						<a href="#‬" class="header-callback">‪Обратный звонок‬</a>
+						<a href="tel:+79299262301" class="header-phone"> 8 <span>(929)</span> 926-23-01</a>
+						<a href="#" class="header-callback"> Обратный звонок </a>
 					</div>
 				</div>
 			</div>
@@ -116,10 +116,10 @@
 						</li>
 						<!-- Mobile menu -->
 						<li class="nav-item d-xl-none">
-							<a class="nav-link" href="tel:‪89299262301">8 <span>(929)</span> 926-23-01</a>
+							<a class="nav-link" href="tel:+79299262301">8 <span>(929)</span> 926-23-01</a>
 						</li>
 						<li class="nav-item d-xl-none">
-							<a class="nav-link" href="#‬">‪Обратный звонок‬</a>
+							<a class="nav-link" href="#"> Обратный звонок </a>
 						</li>
 						<li class="nav-item d-xl-none mb-2">
 							<a class="ico-button pe-2" href="#"><img src="img/ico/whatsapp-ico.png"></a>
@@ -658,7 +658,7 @@
 							<div class="col-lg-6 offset-lg-6 py-5 my-0 my-lg-3 text-dark">
 								<h3 class="mb-3">Нужна помощь в выборе нашего товара или услуги?</h3>
 								<p>Позвоните на по телефону или напишите в мессенджер и наш специалист ответит на все Ваши вопросы!</p>
-								<p><a href="tel:‪89299262301‬" class="header-phone">‪8 <span>(929)</span> 926-23-01</a></p>
+								<p><a href="tel:+79299262301" class="header-phone"> 8 <span>(929)</span> 926-23-01</a></p>
 								<ul class="nav mb-2 mb-lg-0">
 									<li class="nav-item">
 										<a class="nav-link ico-button px-0" href="#"><img src="img/ico/whatsapp-ico.png"></a>
@@ -725,7 +725,7 @@
 									</ul>
 								</div>
 								<div class="col-2 text-end">
-									<a href="tel:‪89299262301‬" class="header-phone text-light">‪8 <span>(929)</span> 926-23-01</a>
+									<a href="tel:+79299262301" class="header-phone text-light"> 8 <span>(929)</span> 926-23-01</a>
 								</div>
 							</div><!-- End Desktop version -->
 							
@@ -753,7 +753,7 @@
 									</ul>
 								</div>
 								<div class="col-12 pt-4">
-									<a href="tel:‪89299262301‬" class="header-phone text-light">‪8 <span>(929)</span> 926-23-01</a>
+									<a href="tel:+79299262301" class="header-phone text-light"> 8 <span>(929)</span> 926-23-01</a>
 								</div>
 							</div><!-- END Mobail version -->
 						</nav>
@@ -793,10 +793,10 @@
 									</li>
 									<!-- Mobile menu -->
 									<li class="nav-item d-xl-none">
-										<a class="nav-link" href="tel:‪89037512663">8 <span>(903)</span> 751-26-63</a>
+										<a class="nav-link" href="tel:+79299262301">8 <span>(929)</span>926-23-01</a>
 									</li>
 									<li class="nav-item d-xl-none">
-										<a class="nav-link" href="#‬">‪Обратный звонок‬</a>
+										<a class="nav-link" href="#"> Обратный звонок </a>
 									</li>
 									<li class="nav-item d-xl-none mb-2">
 										<a class="ico-button pe-2" href="#"><img src="img/ico/whatsapp-ico.png"></a>
